# vertector-data-ingestion

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.neo4j.yml  pyproject.toml
.github/workflows/: ci.yml
config/: .env.example  README.md
docs/: README.md  api-reference.md  configuration.md  embedding_models.md  installation.md  mcp-server.md  neo4j-integration.md  quickstart.md  user-guide.md
examples/: README.md  audio_transcription.py  basic_usage.py  custom_embedding_models.py  kg_builder_demo.py  mcp_example.py  neo4j_knowledge_graph_demo.py  rag_pipeline.py
notebooks/: 01_document_processing.ipynb  02_audio_transcription.ipynb  03_rag_pipeline.ipynb  04_multimodal_integration.ipynb  05_neo4j_integration.ipynb  README.md
notebooks/output/: document.md  transcript.srt
scripts/: README.md  batch_convert.py  validate_notebooks.py
src/vertector_data_ingestion/: __init__.py
src/vertector_data_ingestion/audio/: __init__.py  audio_factory.py  base.py  whisper_transcriber.py
src/vertector_data_ingestion/chunkers/: hybrid_chunker.py  metadata_enricher.py
src/vertector_data_ingestion/core/: hardware_detector.py  pipeline_router.py  universal_converter.py
src/vertector_data_ingestion/exporters/: __init__.py  base.py  doctags_exporter.py  exporter_factory.py  json_exporter.py  markdown_exporter.py
src/vertector_data_ingestion/integrations/: __init__.py
src/vertector_data_ingestion/mcp/: README.md  __init__.py  server.py
src/vertector_data_ingestion/models/: chunk.py  config.py  document.py
src/vertector_data_ingestion/monitoring/: __init__.py  logger.py  metrics.py
src/vertector_data_ingestion/ocr/: base.py  easyocr_plugin.py  ocr_factory.py  ocrmac_plugin.py  tesseract_plugin.py
src/vertector_data_ingestion/utils/: cache.py  model_utils.py
src/vertector_data_ingestion/vector/: base.py  chroma_adapter.py  embedding_manager.py
test_documents/: sample_pptx.pptx
tests/integration/: test_audio_config_integration.py  test_audio_transcription.py  test_mvp_end_to_end.py  test_ocr_comparison.py
tests/integration/neo4j/: __init__.py  test_audio_integration.py
tests/unit/: __init__.py
tests/unit/integrations/: __init__.py  (+2 more)
(+11 files in other folders)
