[project]
name = "vertector-data-ingestion"
version = "0.1.0"
description = "Production-grade universal multimodal data ingestion pipeline using IBM Docling"
readme = "README.md"
authors = [
    { name = "Enoch Tetteh", email = "cutetetteh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "docling>=2.65.0",
    "docling-core>=2.56.0",
    "docling-ibm-models>=3.10.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.6.0",
    "easyocr>=1.7.2",
    "pytesseract>=0.3.13",
    "chromadb>=1.3.7",
    "sentence-transformers>=5.2.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "tenacity>=8.5.0",
    "torch>=2.2.0",
    "transformers>=4.57.3",
    "pymupdf>=1.26.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.11.0",
]
asr = [
    "openai-whisper>=20250625",
    "mlx-whisper>=0.4.3",
]
mlx = [
    "mlx>=0.30.1",
    "mlx-lm>=0.29.0,<0.30.0",
    "mlx-vlm>=0.3.9",
    "mlx-whisper>=0.4.3",
]
mcp = [
    "mcp>=1.25.0",
    "fastmcp>=0.2.0",
]
notebooks = [
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "ipykernel>=6.29.0",
]
cloud = [
    "boto3>=1.34.0",
    "google-cloud-storage>=2.16.0",
]
all = [
    "openai-whisper>=20250625",
    "mlx-whisper>=0.4.3",
    "mlx>=0.30.1",
    "mlx-lm>=0.29.0,<0.30.0",
    "mlx-vlm>=0.3.9",
    "mcp>=1.25.0",
    "fastmcp>=0.2.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "ipykernel>=6.29.0",
    "boto3>=1.34.0",
    "google-cloud-storage>=2.16.0",
]

[project.scripts]
vertector = "vertector_data_ingestion.cli.main:cli"
vertector-data-ingestion-mcp = "vertector_data_ingestion.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--cov=vertector_data_ingestion", "--cov-report=html"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
